res/examples/valid/const_decl_with_existing_variable_in_closed_scope.eg
{
    let a = 123;
};

const a = 456;