res/examples/invalid/let_decl_with_existing_const.eg
const a = 123;
let a = 456;

// out: TypeError: a is already defined